--- a/index_siv.html
+++ b/index_siv.html
@@ -10,9 +10,11 @@
 <body>
     <div class="info-display">
         <div class="header" id="file-selection">
-            <h1 style="color: black;">Sélectionnez un fichier CSV :</h1>
-            <input type="file" id="file-input" accept=".csv">
-            <button id="load-button">Charger les données</button>
+            <h1 style="color: black;">Sélectionnez une période :</h1>
+            <button onclick="loadPeriod('lav_sco')">Lundi au Vendredi - Période scolaire</button>
+            <button onclick="loadPeriod('lav_vac')">Lundi au Vendredi - Vacances scolaires</button>
+            <button onclick="loadPeriod('sam')">Samedi - Toute l'année</button>
+            <button onclick="loadPeriod('dim')">Dimanche - Toute l'année</button>
         </div>
         <div class="stop-selection" id="stop-selection" style="display: none;">
             <label for="stop-select" style="color: black;">Sélectionnez un arrêt :</label>
