--- a/admin_siv.html
+++ b/admin_siv.html
@@ -32,6 +32,7 @@
             </div>
         </div>
     </div>
+    <button id="scroll-to-top-button" onclick="scrollToTop()">Haut de page</button>
     <script src="admin_script_siv.js"></script>
 </body>
 </html>
