--- a/index_siv.html
+++ b/index_siv.html
@@ -50,6 +50,9 @@
                 <div class="progress-bar-fill"></div>
             </div>
         </div>
+        <div id="suspension-container" style="display: none;">
+            <div id="suspension-message" class="suspension-message"></div>
+        </div>
         <div id="info-container" style="display: none;">
             <div id="traffic-info-header">mouvàe Info Trafic</div>
             <div id="traffic-info-details">
