--- a/admin_siv.html
+++ b/admin_siv.html
@@ -42,7 +42,7 @@
             </select>
             <button onclick="loadStops()">Charger les arrêts</button>
             <div id="suspension-stop-selection" style="display: none;">
-                <select id="suspension-stop-input" multiple size="10">
+                <select id="suspension-stop-input" multiple>
                     <!-- Options d'arrêts seront ajoutées dynamiquement -->
                 </select>
                 <div id="selected-stops-list">
