--- a/index_siv.html
+++ b/index_siv.html
@@ -39,9 +39,6 @@
         <div id="departure-info" style="display: none;">
             <!-- Les informations de départ seront ajoutées ici -->
         </div>
-            <div id="suspension-container" style="display: none;">
-                <div id="suspension-message" class="suspension-message"></div>
-        </div>
         <div id="progress-bars-container" style="display: none;">
             <div class="progress-bar">
                 <div class="progress-bar-fill"></div>
@@ -52,6 +49,9 @@
             <div class="progress-bar">
                 <div class="progress-bar-fill"></div>
             </div>
+        </div>
+        <div id="suspension-container" style="display: none;">
+            <div id="suspension-message" class="suspension-message" style="width: 760px; height: 400px; margin: 20px 0; background-color: #e9e9e9;"></div>
         </div>
         <div id="info-container" style="display: none;">
             <div id="traffic-info-header">mouvàe Info Trafic</div>
