--- a/index_siv.html
+++ b/index_siv.html
@@ -11,7 +11,7 @@
     <div class="info-display">
         <div class="stop-selection" id="stop-selection">
             <label for="stop-select" style="color: black;">Sélectionnez un arrêt :</label>
-            <select id="stop-select" style="width: 300px;"></select> <!-- Augmenter la largeur du sélecteur -->
+            <select id="stop-select"></select>
             <button id="validate-button">Valider l'arrêt</button>
         </div>
         <div class="stop-header" id="stop-header" style="display: none;">
