--- a/index_siv.html
+++ b/index_siv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mouvàe | Prochains passages</title>
+    <title>Prochains départs | mouvàe</title>
     <link rel="stylesheet" href="styles_siv.css">
     <link href="https://fonts.googleapis.com/css2?family=Daikon:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
