--- a/admin_siv.html
+++ b/admin_siv.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - mouvàe</title>
     <link rel="stylesheet" href="admin_styles_siv.css">
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGT1WS91iCXFBTv50898dgRCXU47AOOLM",
+            authDomain: "mouvae-568ff.firebaseapp.com",
+            projectId: "mouvae-568ff",
+            storageBucket: "mouvae-568ff.firebasestorage.app",
+            messagingSenderId: "423290034551",
+            appId: "1:423290034551:web:3cf67b1b98f213ab2c6972"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+    </script>
 </head>
 <body>
     <div class="admin-container">
